--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 .DS_Store
+.AppleDouble
+.LSOverride
+Icon
 ._*
 .Spotlight-V100
 .Trashes
 Thumbs.db
+ehthumbs.db
 Desktop.ini
-*.orig
+$RECYCLE.BIN/
 
-public/css/client.css
-public/scripts/client.js
+public/css/application.css
+public/js/application.js
